main footer and footer responsive

--- a/index.html
+++ b/index.html
@@ -50,25 +50,43 @@
                         </div>
                         <img class="main__quality-img" src="./images/rasm-1.png " width="450" height="500" srcset="./images/rasm-1.png 1x, ./images/2x 1.png 2x" alt="on table have coffee and this coffee heve ing heart">
                     </div>
-                    <!-- <div class="main__footer--section our" >
+                    <div class="main__footer-section our" >
+
                         <h2 class="main__our">Our headquarters</h2>
-                        <ul class="main__footer--list">
-                            <li class="main__footer--title"><img src="./images/Combined Shape.svg" alt=""><h3 class="main__text--h3">United Kingdom</h3><address class="main__address"> 68  Asfordby Rd<br>Alcaston<br>SY6 1YA<br>+44 1241 918425</address></li>
-                            <li class="main__footer--title"><img src="./images/Combined Shape (1) (1).svg" alt=""><h3 class="main__text--h3">Canada</h3><address class="main__address"> 1528  Eglinton Avenue<br>Toronto<br>Ontario M4P<br>1A6 +1 416 485 2997</address></li>
-                            <li class="main__footer--title"><img src="./images/Combined Shape (2).svg" alt=""><h3 class="main__text--h3">Australia</h3><address class="main__address"> 36 Swanston Street<br>Kewell<br>Victoria<br>+61 4 9928 3629</address></li>
+
+                        <ul class="main__footer-tip">
+
+                            <li class="main__footer-title">
+                                <img class="header__footer-ing" src="./images/Combined Shape.svg" alt="">
+                                <h3 class="main__text-h3">United Kingdom</h3>
+                                <address class="main__address"> 68  Asfordby Rd<br>Alcaston<br>SY6 1YA<br>+44 1241 918425</address>
+                            </li>
+
+                            <li class="main__footer-title">
+                                <img class="header__footer-ing" src="./images/Combined Shape (1) (1).svg" alt="">
+                                <h3 class="main__text-h3">Canada</h3>
+                                <address class="main__address"> 1528  Eglinton Avenue<br>Toronto<br>Ontario M4P<br>1A6 +1 416 485 2997</address>
+                            </li>
+
+                            <li class="main__footer-title">
+                                <img class="header__footer-ing" src="./images/Combined Shape (2).svg" alt="">
+                                <h3 class="main__text-h3">Australia</h3>
+                                <address class="main__address"> 36 Swanston Street<br>Kewell<br>Victoria<br>+61 4 9928 3629</address>
+                            </li>
+
                         </ul>
-                    </div>-->
+                    </div>
                 </div>
             </section>
         </main>
- <!-- <footer class="footer">
+ <footer class="footer">
             <div class="container">
                 <div class="footer__list">
-                    <a href="index.html"><img src="./images/logo-footer.svg" alt=""></a> 
+                    <a class="footer__ikon" href="index.html"><img src="./images/logo-footer.svg" alt=""></a> 
                     <ol class="footer__ol">
-                        <li><a class="footer__title" href="#">HOME</a> </li>
-                        <li><a class="footer__title" href="#"> ABOUT US</a></li>
-                        <li><a class="footer__title" href="#"> Create your plan</a></li>
+                        <li class="footer__text"><a class="footer__title" href="#">HOME</a> </li>
+                        <li class="footer__text"><a class="footer__title" href="#"> ABOUT US</a></li>
+                        <li class="footer__text"><a class="footer__title" href="#"> Create your plan</a></li>
                     </ol>
                     <ul class="footer__2">
                         <li class="footer__logo"><a href="#" target="black"><img src="./images/Path(2).svg" alt="fecebook"></a></li>
@@ -78,7 +96,7 @@
                     
                 </div>
             </div>
-        </footer> --> -->
+        </footer>
         <script src="./js/main.js"></script>
     </body>
     </html>
